--- a/dg.html
+++ b/dg.html
@@ -1,5 +1,5 @@
 <!-- Dangerous Goods Declaration Print Format -->
-
+<!-- WinGitTest -->
 <!--Table 1, fields 1 through 11 -->
 <table border="1" width="100%">
   <tr>
